--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             height: 40px;
         }
 
-        .store-badge.google {
+        .store-badge google {
             height: 60px;
         }
         
@@ -278,7 +278,7 @@
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ratemybuy.ratemybuy" target="_blank">
                     <img id="playStoreImg" src="https://play.google.com/intl/en_us/badges/static/images/badges/de_badge_web_generic.png" 
-                         alt="Get it on Google Play" class="store-badge.google">
+                         alt="Get it on Google Play" class="store-badge google">
                 </a>
             </div>
         </div>
