--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             transition: transform 0.2s, opacity 0.2s;
         }
 
-        .store-badge img {
+        .store-badge playStore {
             height: 100%;
             width: auto; /* Breite automatisch basierend auf Höhe */
         }
@@ -282,7 +282,7 @@
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ratemybuy.ratemybuy" target="_blank">
                     <img id="playStoreImg" src="https://play.google.com/intl/en_us/badges/static/images/badges/de_badge_web_generic.png" 
-                         alt="Get it on Google Play" class="store-badge google">
+                         alt="Get it on Google Play" class="store-badge playStore">
                 </a>
             </div>
         </div>
