--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
         }
         
         .store-badge {
-            display: inline-block;
-            height: 45px; /* Fixierte Höhe statt width */
-            width: auto; /* Breite automatisch anpassen */
+            ddisplay: inline-block;
+            height: 40px; /* Einheitliche Höhe für beide Badges */
             transition: transform 0.2s, opacity 0.2s;
         }
 
         .store-badge playStore {
             height: 100%;
-            width: auto; /* Breite automatisch basierend auf Höhe */
+            width: auto;
+            display: block; /* Entfernt zusätzlichen Platz unter dem Bild */
         }
         
         .loading {
