--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             transition: transform 0.2s, opacity 0.2s;
         }
 
-        .store-badge playStore {
-            height: 200%;
+        .store-badge appStore {
+            height: 80%;
             width: auto;
             display: block; /* Entfernt zusätzlichen Platz unter dem Bild */
         }
@@ -278,11 +278,11 @@
             <div class="stores">
                 <a href="https://apps.apple.com/app/id6752779751" target="_blank">
                     <img id="appStoreImg" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" 
-                         alt="Download on App Store" class="store-badge">
+                         alt="Download on App Store" class="store-badge appStore">
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ratemybuy.ratemybuy" target="_blank">
                     <img id="playStoreImg" src="https://play.google.com/intl/en_us/badges/static/images/badges/de_badge_web_generic.png" 
-                         alt="Get it on Google Play" class="store-badge playStore">
+                         alt="Get it on Google Play" class="store-badge">
                 </a>
             </div>
         </div>
