--- a/index.html
+++ b/index.html
@@ -130,15 +130,9 @@
         }
         
         .store-badge {
-            ddisplay: inline-block;
-            height: 55px; /* Einheitliche Höhe für beide Badges */
+            display: inline-block;
+            width: 150px;
             transition: transform 0.2s, opacity 0.2s;
-        }
-
-        .store-badge appStore {
-            height: 80%;
-            width: auto;
-            display: block; /* Entfernt zusätzlichen Platz unter dem Bild */
         }
         
         .loading {
@@ -278,7 +272,7 @@
             <div class="stores">
                 <a href="https://apps.apple.com/app/id6752779751" target="_blank">
                     <img id="appStoreImg" src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" 
-                         alt="Download on App Store" class="store-badge appStore">
+                         alt="Download on App Store" class="store-badge">
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ratemybuy.ratemybuy" target="_blank">
                     <img id="playStoreImg" src="https://play.google.com/intl/en_us/badges/static/images/badges/de_badge_web_generic.png" 
