--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             width: 150px;
             transition: transform 0.2s, opacity 0.2s;
         }
+
+        #playStoreImg {
+            width: 170px;
+        }
         
         .loading {
             display: none;
