--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
             display: inline-block;
             width: 140px;
             transition: transform 0.2s, opacity 0.2s;
+            vertical-align: middle;
         }
 
         #playStoreImg {
             width: 145px;
+            vertical-align: middle;
         }
         
         .loading {
