--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         #playStoreImg {
             width: 145px;
-            vertical-align: middle;
+            margin-top: -8px;
         }
         
         .loading {
